--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -97,6 +97,9 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="latitude">4001</string>
+    <string name="longitude">4002</string>
+    <string name="location">4003</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_user_posts">user_posts</string>
     <string name="title_activity_test">test</string>
