--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -108,4 +108,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="chats">Chats</string>
     <string name="discover">Discover</string>
+    <string name="me">Me</string>
 </resources>
